force-app/main/default/objects/Frota_Total__c/Frota_Total__c.object-meta.xml
<CustomObject>
    <label>Frota Total</label>
    <nameField>
        <displayFormat>FT-{0000000000}</displayFormat>
        <label>Frota Total</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Frota Total</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>