force-app/main/default/objects/Frota_Total__c/fields/Quantidade_Potencial__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_Potencial__c</fullName>
    <label>Quantidade &quot;Potencial&quot;</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>