force-app/main/default/objects/Frota_Total__c/fields/Quantidade_Sascar__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_Sascar__c</fullName>
    <label>Quantidade Sascar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>