force-app/main/default/objects/Frota_Total__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <formula>Quantidade_Sascar__c +  Quantidade_Potencial__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Frota Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>